--- a/backend/preeclampsia/src/main/resources/application.properties.template
+++ b/backend/preeclampsia/src/main/resources/application.properties.template
@@ -12,5 +12,12 @@ app.ihealth.api-name=OpenApiBP
 app.ihealth.api-sc=<<INSERT YOUR APP SC value>>
 app.ihealth.api-sv=<<INSERT YOUR APP SV value>>
 
+# REST CORS support
+spring.web.cors.allowed-origin-patterns=http://localhost:3000,http://localhost:5173
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
+spring.web.cors.max-age=3600
+
 # Logging
 logging.level.edu.villanova.csc8542.preeclampsia=DEBUG
