--- a/backend/preeclampsia/src/main/resources/application.properties
+++ b/backend/preeclampsia/src/main/resources/application.properties
@@ -1,1 +1,29 @@
+app.ihealth.base-url=https://api.ihealthlabs.com:8443
+app.ihealth.authorization-uri=/OpenApiV2/OAuthv2/userauthorization/
+app.ihealth.blood-pressure-uri=/OpenApiV2/user/
+app.ihealth.provider=ihealth-provider
+app.ihealth.client-id=749b87059be34fa7a05b7d44697cbaf0
+app.ihealth.client-secret=db9b5af548e34d9d9200ac0d8582e7f7
+app.ihealth.response-type=code
+app.ihealth.grant-type=authorization_code
+app.ihealth.redirect-uri=http://localhost:8080/redirect
+
+app.ihealth.api-name=OpenApiBP
+app.ihealth.api-sc=59d924ee122f4a9dacc08564ed545ecf
+app.ihealth.api-sv=27aae441c85c4cc6b2ab97213a95da1a
+
+# REST CORS support
+spring.web.cors.allowed-origin-patterns=http://localhost:3000,http://localhost:5173
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
+spring.web.cors.max-age=3600
+
 spring.application.name=preeclampsia
+
+# Frontend
+app.ihealth.frontend-baseUrl=http://localhost:3000
+app.ihealth.frontend-callbackUri=/ihealth-callback
+
+# Logging
+logging.level.edu.villanova.csc8542.preeclampsia=DEBUG
